# project7

./: main.py  pyproject.toml  step3_transcription_factor_classifier.ipynb
.github/workflows/: test.yml
.ipynb_checkpoints/: step2_autoencoder-checkpoint.ipynb
nn/: LICENSE  __init__.py  nn.py  preprocess.py
test/: test_nn.py
